--- a/Pathwinder.vcxproj.filters
+++ b/Pathwinder.vcxproj.filters
@@ -60,7 +60,7 @@
     <ClCompile Include="Source\ApiWindowsInternal.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\InProgressDirectoryEnumeration.cpp">
+    <ClCompile Include="Source\DirectoryOperationQueue.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\FileInformationStruct.cpp">
@@ -134,7 +134,7 @@
     <ClInclude Include="Include\Pathwinder\Internal\OpenHandleStore.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Pathwinder\Internal\InProgressDirectoryEnumeration.h">
+    <ClInclude Include="Include\Pathwinder\Internal\DirectoryOperationQueue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Include\Pathwinder\Internal\BufferPool.h">
