--- a/Pathwinder.vcxproj
+++ b/Pathwinder.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="Include\Pathwinder\Internal\ApiBitSet.h" />
     <ClInclude Include="Include\Pathwinder\Internal\ApiWindows.h" />
     <ClInclude Include="Include\Pathwinder\Internal\ApiWindowsInternal.h" />
+    <ClInclude Include="Include\Pathwinder\Internal\ApiWindowsShell.h" />
     <ClInclude Include="Include\Pathwinder\Internal\ArrayList.h" />
     <ClInclude Include="Include\Pathwinder\Internal\BufferPool.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Configuration.h" />
