--- a/Pathwinder.vcxproj
+++ b/Pathwinder.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="Source\HookModuleMain.cpp" />
     <ClCompile Include="Source\Hooks.cpp" />
     <ClCompile Include="Source\Message.cpp" />
+    <ClCompile Include="Source\OpenHandleStore.cpp" />
     <ClCompile Include="Source\PathwinderConfigReader.cpp" />
     <ClCompile Include="Source\Resolver.cpp" />
     <ClCompile Include="Source\Strings.cpp" />
