Add tests for the open handle state and metadata storage container, and augment debug assertion functionality to allow testing of conditions that would normally trigger a debug assertion failure.

--- a/PathwinderTest.vcxproj.filters
+++ b/PathwinderTest.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="Source\FilesystemExecutor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Test\Case\OpenHandleStoreTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\Pathwinder\Test\Harness.h">
@@ -195,6 +198,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemExecutor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Pathwinder\Internal\OpenHandleStore.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
