--- a/PathwinderTest.vcxproj
+++ b/PathwinderTest.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Source\Test\Case\FilesystemDirectorBuilderTest.cpp" />
     <ClCompile Include="Source\Test\Case\FilesystemDirectorTest.cpp" />
     <ClCompile Include="Source\Test\Case\FilesystemRuleTest.cpp" />
+    <ClCompile Include="Source\Test\Case\OpenHandleStoreTest.cpp" />
     <ClCompile Include="Source\Test\Case\PathwinderConfigReaderTest.cpp" />
     <ClCompile Include="Source\Test\Case\PrefixIndexTest.cpp" />
     <ClCompile Include="Source\Test\Case\ResolverTest.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="Include\Pathwinder\Internal\Iterator.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Message.h" />
     <ClInclude Include="Include\Pathwinder\Internal\MutexWrapper.h" />
+    <ClInclude Include="Include\Pathwinder\Internal\OpenHandleStore.h" />
     <ClInclude Include="Include\Pathwinder\Internal\PathwinderConfigReader.h" />
     <ClInclude Include="Include\Pathwinder\Internal\PrefixIndex.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Resolver.h" />
