--- a/PathwinderTest.vcxproj
+++ b/PathwinderTest.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="Source\Test\Case\FileInformationStructTest.cpp" />
     <ClCompile Include="Source\Test\Case\FilesystemDirectorBuilderTest.cpp" />
     <ClCompile Include="Source\Test\Case\FilesystemDirectorTest.cpp" />
+    <ClCompile Include="Source\Test\Case\FilesystemExecutorTest.cpp" />
     <ClCompile Include="Source\Test\Case\FilesystemRuleTest.cpp" />
     <ClCompile Include="Source\Test\Case\OpenHandleStoreTest.cpp" />
     <ClCompile Include="Source\Test\Case\PathwinderConfigReaderTest.cpp" />
