--- a/PathwinderTest.vcxproj
+++ b/PathwinderTest.vcxproj
@@ -139,11 +139,13 @@
     <ClCompile Include="Source\Test\Case\PrefixIndexTest.cpp" />
     <ClCompile Include="Source\Test\Case\ResolverTest.cpp" />
     <ClCompile Include="Source\Test\Case\StringsTest.cpp" />
+    <ClCompile Include="Source\Test\Case\ThreadPoolTest.cpp" />
     <ClCompile Include="Source\Test\Harness.cpp" />
     <ClCompile Include="Source\Test\MockDirectoryOperationQueue.cpp" />
     <ClCompile Include="Source\Test\MockFilesystemOperations.cpp" />
     <ClCompile Include="Source\Test\TestCase.cpp" />
     <ClCompile Include="Source\Test\Utilities.cpp" />
+    <ClCompile Include="Source\ThreadPool.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\Pathwinder\Internal\ApiBitSet.h" />
@@ -170,6 +172,7 @@
     <ClInclude Include="Include\Pathwinder\Internal\Resolver.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Strings.h" />
     <ClInclude Include="Include\Pathwinder\Internal\TemporaryBuffer.h" />
+    <ClInclude Include="Include\Pathwinder\Internal\ThreadPool.h" />
     <ClInclude Include="Include\Pathwinder\Internal\ValueOrError.h" />
     <ClInclude Include="Include\Pathwinder\Test\Harness.h" />
     <ClInclude Include="Include\Pathwinder\Test\MockDirectoryOperationQueue.h" />
