Rename PrefixIndex to PrefixTree to reflect its new behavior as a fully-fledged tree data structure, not just an index that refers to other objects.

--- a/Pathwinder.vcxproj.filters
+++ b/Pathwinder.vcxproj.filters
@@ -116,7 +116,7 @@
     <ClInclude Include="Include\Pathwinder\Internal\DebugAssert.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Pathwinder\Internal\PrefixIndex.h">
+    <ClInclude Include="Include\Pathwinder\Internal\PrefixTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemDirectorBuilder.h">
