--- a/PathwinderTest.vcxproj.filters
+++ b/PathwinderTest.vcxproj.filters
@@ -60,7 +60,7 @@
     <ClCompile Include="Source\Test\MockFilesystemOperations.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Test\Case\PrefixIndexTest.cpp">
+    <ClCompile Include="Source\Test\Case\PrefixTreeTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\FilesystemDirectorBuilder.cpp">
@@ -164,7 +164,7 @@
     <ClInclude Include="Include\Pathwinder\Internal\DebugAssert.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Pathwinder\Internal\PrefixIndex.h">
+    <ClInclude Include="Include\Pathwinder\Internal\PrefixTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemDirectorBuilder.h">
