Add an integration testing framework and use it to catch an inconsistency between files that are enumerated via directory enumeration and files that are accessible via direct path query.

--- a/PathwinderTest.vcxproj
+++ b/PathwinderTest.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="Source\Test\Case\FilesystemDirectorTest.cpp" />
     <ClCompile Include="Source\Test\Case\FilesystemExecutorTest.cpp" />
     <ClCompile Include="Source\Test\Case\FilesystemRuleTest.cpp" />
+    <ClCompile Include="Source\Test\Case\IntegrationTest.cpp" />
     <ClCompile Include="Source\Test\Case\OpenHandleStoreTest.cpp" />
     <ClCompile Include="Source\Test\Case\PathwinderConfigReaderTest.cpp" />
     <ClCompile Include="Source\Test\Case\PrefixTreeTest.cpp" />
