--- a/Pathwinder.vcxproj.filters
+++ b/Pathwinder.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="Source\ThreadPool.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\FilesystemInstruction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resources\Pathwinder.h">
