--- a/PathwinderTest.vcxproj
+++ b/PathwinderTest.vcxproj
@@ -119,6 +119,7 @@
     <ClCompile Include="Source\FileInformationStruct.cpp" />
     <ClCompile Include="Source\FilesystemDirectorBuilder.cpp" />
     <ClCompile Include="Source\FilesystemExecutor.cpp" />
+    <ClCompile Include="Source\FilesystemInstruction.cpp" />
     <ClCompile Include="Source\FilesystemRule.cpp" />
     <ClCompile Include="Source\FilesystemDirector.cpp" />
     <ClCompile Include="Source\Globals.cpp" />
