--- a/PathwinderTest.vcxproj.filters
+++ b/PathwinderTest.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClCompile Include="Source\FilesystemInstruction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Test\IntegrationTestSupport.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\Pathwinder\Test\Harness.h">
@@ -219,6 +222,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Include\Pathwinder\Internal\ThreadPool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Pathwinder\Test\IntegrationTestSupport.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
