--- a/PathwinderTest.vcxproj
+++ b/PathwinderTest.vcxproj
@@ -129,19 +129,20 @@
     <ClCompile Include="Source\Resolver.cpp" />
     <ClCompile Include="Source\Strings.cpp" />
     <ClCompile Include="Source\TemporaryBuffer.cpp" />
-    <ClCompile Include="Source\Test\Case\DirectoryOperationQueueTest.cpp" />
-    <ClCompile Include="Source\Test\Case\FileInformationStructTest.cpp" />
-    <ClCompile Include="Source\Test\Case\FilesystemDirectorBuilderTest.cpp" />
-    <ClCompile Include="Source\Test\Case\FilesystemDirectorTest.cpp" />
-    <ClCompile Include="Source\Test\Case\FilesystemExecutorTest.cpp" />
-    <ClCompile Include="Source\Test\Case\FilesystemRuleTest.cpp" />
-    <ClCompile Include="Source\Test\Case\IntegrationTest.cpp" />
-    <ClCompile Include="Source\Test\Case\OpenHandleStoreTest.cpp" />
-    <ClCompile Include="Source\Test\Case\PathwinderConfigReaderTest.cpp" />
-    <ClCompile Include="Source\Test\Case\PrefixTreeTest.cpp" />
-    <ClCompile Include="Source\Test\Case\ResolverTest.cpp" />
-    <ClCompile Include="Source\Test\Case\StringsTest.cpp" />
-    <ClCompile Include="Source\Test\Case\ThreadPoolTest.cpp" />
+    <ClCompile Include="Source\Test\Case\Integration\DocumentedExample.cpp" />
+    <ClCompile Include="Source\Test\Case\Integration\RealWorldScenario.cpp" />
+    <ClCompile Include="Source\Test\Case\Unit\DirectoryOperationQueueTest.cpp" />
+    <ClCompile Include="Source\Test\Case\Unit\FileInformationStructTest.cpp" />
+    <ClCompile Include="Source\Test\Case\Unit\FilesystemDirectorBuilderTest.cpp" />
+    <ClCompile Include="Source\Test\Case\Unit\FilesystemDirectorTest.cpp" />
+    <ClCompile Include="Source\Test\Case\Unit\FilesystemExecutorTest.cpp" />
+    <ClCompile Include="Source\Test\Case\Unit\FilesystemRuleTest.cpp" />
+    <ClCompile Include="Source\Test\Case\Unit\OpenHandleStoreTest.cpp" />
+    <ClCompile Include="Source\Test\Case\Unit\PathwinderConfigReaderTest.cpp" />
+    <ClCompile Include="Source\Test\Case\Unit\PrefixTreeTest.cpp" />
+    <ClCompile Include="Source\Test\Case\Unit\ResolverTest.cpp" />
+    <ClCompile Include="Source\Test\Case\Unit\StringsTest.cpp" />
+    <ClCompile Include="Source\Test\Case\Unit\ThreadPoolTest.cpp" />
     <ClCompile Include="Source\Test\Harness.cpp" />
     <ClCompile Include="Source\Test\IntegrationTestSupport.cpp" />
     <ClCompile Include="Source\Test\MockDirectoryOperationQueue.cpp" />
