--- a/Properties/ThirdParty.props
+++ b/Properties/ThirdParty.props
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ImportGroup Label="PropertySheets" Condition="'$(ThirdPartyNeedsHookshot)'!=''">
-    <Import Project="$(SolutionDir)Properties\ThirdParty\Hookshot.props" />
-  </ImportGroup>
-  <ImportGroup Label="PropertySheets" Condition="'$(ThirdPartyNeedsXstdBitSet)'!=''">
-    <Import Project="$(SolutionDir)Properties\ThirdParty\XstdBitSet.props" />
-  </ImportGroup>
+  <Import Project="$(SolutionDir)Properties\ThirdParty\Hookshot.props" Condition="'$(ThirdPartyNeedsHookshot)'!=''"/>
+  <Import Project="$(SolutionDir)Properties\ThirdParty\XstdBitSet.props" Condition="'$(ThirdPartyNeedsXstdBitSet)'!=''"/>
 </Project>
