--- a/Pathwinder.props
+++ b/Pathwinder.props
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ThirdPartyNeedsHookshot>yes</ThirdPartyNeedsHookshot>
-    <ThirdPartyNeedsXstdBitSet>yes</ThirdPartyNeedsXstdBitSet>
+    <ProductName>Pathwinder</ProductName>
+    <ThirdPartyDeps>XstdBitSet,Hookshot</ThirdPartyDeps>
   </PropertyGroup>
 </Project>
