--- a/Properties/NativeBuild.props
+++ b/Properties/NativeBuild.props
@@ -7,7 +7,7 @@
     />
   </Target>
 
-  <Import Project="$(MSBuildProjectDirectory)\$(MSBuildProjectName).props" Condition="Exists('$(MSBuildProjectDirectory)\$(MSBuildProjectName).props')" />
+  <Import Project="$(MSBuildProjectDirectory)\$(MSBuildProjectName).props" />
 
   <PropertyGroup>
     <ProjectLanguage>cpp</ProjectLanguage>
@@ -15,7 +15,7 @@
   <Import Project="$(MSBuildThisFileDirectory)CommonBuild.props" />
 
   <!-- Output paths
-       Project-independent directories are turned into the specific properties Visual Studio expects for C# projects. -->
+       Project-independent directories are turned into the specific properties Visual Studio expects for C++ projects. -->
   <PropertyGroup>
     <OutDir>$(TopLevelOutDir)</OutDir>
     <IntDir>$(TopLevelIntDir)</IntDir>
@@ -29,7 +29,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
-      <AdditionalIncludeDirectories>$(SolutionDir)Include\$(SolutionName);$(SolutionDir)Include\$(SolutionName)\Internal;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MSBuildProjectDirectory)\Include\$(ProductName);$(MSBuildProjectDirectory)\Include\$(ProductName)\Internal;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <SupportJustMyCode>false</SupportJustMyCode>
       <WarningLevel>Level3</WarningLevel>
@@ -45,7 +45,7 @@
       <WholeProgramOptimization>false</WholeProgramOptimization>
     </ClCompile>
     <MASM>
-      <IncludePaths>$(SolutionDir)Include\$(SolutionName);$(SolutionDir)Include\$(SolutionName)\Internal;%(IncludePaths)</IncludePaths>
+      <IncludePaths>$(MSBuildProjectDirectory)\Include\$(ProductName);$(MSBuildProjectDirectory)\Include\$(ProductName)\Internal;%(IncludePaths)</IncludePaths>
       <EnableAssemblyGeneratedCodeListing>true</EnableAssemblyGeneratedCodeListing>
       <ObjectFileName>$(IntDir)%(Filename)%(Extension).obj</ObjectFileName>
       <AssembledCodeListingFile>$(IntDir)%(Filename)%(Extension).lst</AssembledCodeListingFile>
@@ -72,10 +72,10 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="$(ProjectName.EndsWith('Test'))">
     <ClCompile>
-      <AdditionalIncludeDirectories>$(SolutionDir)Include\$(SolutionName)\Test;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MSBuildProjectDirectory)\Include\$(ProductName)\Test;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <MASM>
-      <IncludePaths>$(SolutionDir)Include\$(SolutionName)\Test;%(IncludePaths)</IncludePaths>
+      <IncludePaths>$(MSBuildProjectDirectory)\Include\$(ProductName)\Test;%(IncludePaths)</IncludePaths>
     </MASM>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)'=='Debug'">
@@ -109,8 +109,8 @@
 
   <!-- Resources and version information -->
   <PropertyGroup>
-    <ResourceForcedIncludes Condition="Exists('$(SolutionDir)Resources\$(SolutionName).h')">$(SolutionDir)Resources\$(SolutionName).h</ResourceForcedIncludes>
-    <ResourceForcedIncludes Condition="Exists('$(SolutionDir)Resources\$(MSBuildProjectName).h')">$(ResourceForcedIncludes);$(SolutionDir)Resources\$(MSBuildProjectName).h</ResourceForcedIncludes>
+    <ResourceForcedIncludes Condition="Exists('$(MSBuildProjectDirectory)\Resources\$(ProductName).h')">$(MSBuildProjectDirectory)\Resources\$(ProductName).h</ResourceForcedIncludes>
+    <ResourceForcedIncludes Condition="Exists('$(MSBuildProjectDirectory)\Resources\$(MSBuildProjectName).h')">$(ResourceForcedIncludes);$(MSBuildProjectDirectory)\Resources\$(MSBuildProjectName).h</ResourceForcedIncludes>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
