--- a/Properties/ThirdParty.props
+++ b/Properties/ThirdParty.props
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(SolutionDir)Properties\ThirdParty\Hookshot.props" Condition="'$(ThirdPartyNeedsHookshot)'!=''"/>
-  <Import Project="$(SolutionDir)Properties\ThirdParty\XstdBitSet.props" Condition="'$(ThirdPartyNeedsXstdBitSet)'!=''"/>
+  <Import Project="$(MSBuildProjectDirectory)\Properties\ThirdParty\Hookshot.props" Condition="$(ThirdPartyDeps.Contains('Hookshot'))"/>
+  <Import Project="$(MSBuildProjectDirectory)\Properties\ThirdParty\XstdBitSet.props" Condition="$(ThirdPartyDeps.Contains('XstdBitSet'))"/>
 </Project>
